scripts/generator/tests/fixtures/dportsv3/valid/basic.dops
target @main
port category/name
type port
reason "baseline"
maintainer "dev@example.com"
mk set VAR "value"
