scripts/generator/tests/fixtures/dportsv3/invalid/planner/semantic-gate-missing-port.dops
target @main
mk set VAR "missing port"
